--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>     Hi! My name is Kory and, as you may already know, this is the "first" blog post of my programming journey.
                 "First" is in parentheses because I've already taken a course on Python, so it's not really my first day
                 learning how to code. However, I would consider this my first day being able to put words and pictures on a webpage to
-                then be viewed on a browser</p>
+                then be viewed on a browser.</p>
             <p>It's nothing fancy, but it's something! For this webpage, I've used the same html and css format from chapter 1 of this
                 book:
             <figure class="Textbook">
