--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
             <h2 class="IntroText">Day 1</h2>
             <div class="MoneyShot">
                 <img class="MoneyShotImg" src="img/day one.jpg" alt="day one image" />
-                <p class="ImageCaption"></p>
             </div>
         </div>
         <p></p>
-        <div class="Ingredients">
+        <div class="BodyText">
             <h3 class="SubHeader">*It's not really Day 1... Just the first day I can create a blog page from scratch*</h3>
             <p>     Hi! My name is Kory and, as you may already know, this is the "first" blog post of my programming journey.
                 "First" is in parentheses because I've already taken a course on Python, so it's not really my first day
@@ -34,6 +33,37 @@
             </figure>
             <p class="one"><center></center></p>
             <p>I have a ton of work to do, but I think this is a pretty good start! I probaly won't be posting everyday, but hopefully a few times per week... I guess we'll see!</p>
+        </div>
+        <br></br>
+        <br></br>
+        <div class="IntroWrapper">
+            <h2 class="IntroText">Day 1</h2>
+            <div class="MoneyShot">
+                <img class="MoneyShotImg" src="img/day two.jpg" alt="day two image" />
+            </div>
+        </div>
+        <p></p>
+        <div class="BodyText">
+            <h3 class="SubHeader">Lights, camera, action!</h3>
+            <p>     Yup, you guessed it! I learned how to add a video onto the blog. I'm not sure how much this gives a better picture
+                of my life, but I imported a TikTok video from our family TikTok page. This page features my wife, my older son (9) and younger son (2) and myself. We've proably posted 100-150 videos, but this is one
+                of our most recent ones:
+            </p>
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@knhfamily/video/7132936219792510251" data-video-id="7132936219792510251" data-embed-from="oembed" style="max-width: 605px;min-width: 325px;" >
+                <section>
+                    <a target="_blank" title="@knhfamily" href="https://www.tiktok.com/@knhfamily?refer=embed">@knhfamily</a>
+                    <p>But did you die?! 😂
+                        <a title="nobloodnofoul" target="_blank" href="https://www.tiktok.com/tag/nobloodnofoul?refer=embed">#nobloodnofoul</a>
+                        <a title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a>
+                        <a title="foryoupage" target="_blank" href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a>
+                    </p>
+                    <a target="_blank" title="♬ Love You So - The King Khan & BBQ Show" href="https://www.tiktok.com/music/Love-You-So-6728562975734515713?refer=embed">♬ Love You So - The King Khan & BBQ Show</a>
+                </section>
+            </blockquote>
+            <script async src="https://www.tiktok.com/embed.js"></script>
+            <p> There are also a bunch of websites that can seamlessly and effortlessly embed any video that you choose, regardless of
+                where it came from. Other things I've learned are how to properly format, nest, and integrate media queries.
+                <p class="one">Still more work to do, but I like progression!</p>
         </div>
     </body>
 </html>
