--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
                 <img class="TextbookImg" src="img/Ben Frain HTML CSS.jpg" alt="ben frain image" />
                 <figcaption class="Figcaption"></figcaption>
             </figure>
-            <p class="one"><center></center></p>
             <p>I have a ton of work to do, but I think this is a pretty good start! I probaly won't be posting everyday, but hopefully a few times per week... I guess we'll see!</p>
         </div>
         <br></br>
         <br></br>
         <div class="IntroWrapper">
-            <h2 class="IntroText">Day 1</h2>
+            <h2 class="IntroText">Day 2</h2>
             <div class="MoneyShot">
                 <img class="MoneyShotImg" src="img/day two.jpg" alt="day two image" />
             </div>
@@ -62,7 +61,8 @@
             </blockquote>
             <script async src="https://www.tiktok.com/embed.js"></script>
             <p> There are also a bunch of websites that can seamlessly and effortlessly embed any video that you choose, regardless of
-                where it came from. Other things I've learned are how to properly format, nest, and integrate media queries.
+                where it came from. Other things I've learned are how to properly format, nest, and integrate media queries. Lastly, the color
+                scheme changes when a viewer is using the "dark mode" setting on their computer or mobile device.
                 <p class="one">Still more work to do, but I like progression!</p>
         </div>
     </body>
