--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>My first blog post</title>
+        <title>My first blog page</title>
         <meta name="description" content="A basic responsive web page post" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <link rel="stylesheet" href="css/day 1 blog.css" />
     </head>
     <body>
+        <div class="MenuWrap">
+            <a href="#" class="ListItem">Home</a>
+            <a href="#" class="ListItem">About Us</a>
+            <a href="#" class="ListItem">Products</a>
+            <a href="#" class="ListItem">Policy</a>
+            <a href="#" class="LastItem">Contact Us</a>
+        </div>
         <div class="Header">
             <a href="/" class="LogoWrapper"><img src="img/Kory's Blog (152 × 54 px) (152 × 54 px).png" alt="Kory's blog logo"/></a>
-            <h1 class="Strap">This is where I'll record my programming journey</h1>
+            <h1 class="Strap">This is where I'll record my programming journey!</h1>
         </div>
         <div class="IntroWrapper">
             <h2 class="IntroText">Day 1</h2>
@@ -45,7 +52,7 @@
         <div class="BodyText">
             <h3 class="SubHeader">Lights, camera, action!</h3>
             <p>     Yup, you guessed it! I learned how to add a video onto the blog. I'm not sure how much this gives a better picture
-                of my life, but I imported a TikTok video from our family TikTok page. This page features my wife, my older son (9) and younger son (2) and myself. We've proably posted 100-150 videos, but this is one
+                of my life, but I imported a TikTok video from our family TikTok page. This page features my wife, my older son (9), and younger son (2), and myself. We've probably posted 100-150 videos, but this is one
                 of our most recent ones:
             </p>
             <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@knhfamily/video/7132936219792510251" data-video-id="7132936219792510251" data-embed-from="oembed" style="max-width: 605px;min-width: 325px;" >
@@ -63,7 +70,42 @@
             <p> There are also a bunch of websites that can seamlessly and effortlessly embed any video that you choose, regardless of
                 where it came from. Other things I've learned are how to properly format, nest, and integrate media queries. Lastly, the color
                 scheme changes when a viewer is using the "dark mode" setting on their computer or mobile device.
-                <p class="one">Still more work to do, but I like progression!</p>
         </div>
+        <br></br>
+        <br></br>
+        <div class="IntroWrapper">
+            <h2 class="IntroText">Day 3</h2>
+            <div class="MoneyShot">
+                <img class="MoneyShotImg" src="img/day three.jpg" alt="day three image" />
+            </div>
+        </div>
+        <p></p>
+        <div class="BodyText">
+            <h3 class="SubHeader">Head to toe!</h3>
+            <p>     Today I learned to add a header and footer and, therefore, that is why you can see
+                some words that will hopefully turn into button at the top of the page and some sections
+                that will hopefully be other miscellaneous things you'll usually see at the bottom of a webpage (
+                    more links, comment section, etc.). Also I played around with Flexbox, which is why the footer
+                    appears to be in blocks. For now, the words in the header and footer are just placeholders. Hopefully,
+                    we can turn them into something cool.
+            </p>
+            <p>Also, in case you're wondering, I definiltely plan on changing this color scheme. I'm not exactly sure
+                what I 'm going for, but it's not this. Anyway...
+            </p>
+        </div>
+        <div class="Footer">
+            <div class="FlexItem FlexHeader">Still a long way to go, but I love the progress!</div>
+            <div class="FlexItem FlexSideOne">
+                <p>Hopefully something cool goes here</p>
+            </div>
+            <div class="FlexItem FlexContent">
+                <a>This</a>
+                <a>is</a>
+                <a>a</a>
+                <a>test</a>
+            </div>
+            <div class="FlexItem FlexSideTwo">I am content in the SideTwo.
+            </div>
+            <div class="FlexItem FlexFooter">This material belong to Kory...I guess</div>
     </body>
 </html>
