--- a/index.html
+++ b/index.html
@@ -94,18 +94,24 @@
             </p>
         </div>
         <div class="Footer">
-            <div class="FlexItem FlexHeader">Still a long way to go, but I love the progress!</div>
-            <div class="FlexItem FlexSideOne">
-                <p>Hopefully something cool goes here</p>
+            <div class="container">
+                <div class="grid-item1">
+                    <div class="FirstFooterText" >A lot of work to do, but I love the progression!
+                    </div>
+                </div>
+                <div class="grid-item2">
+                    <div class="subcontainer">
+                        <div class="subgrid-item1">Some</div>
+                        <div class="subgrid-item2">Links</div>
+                        <div class="subgrid-item3">Will</div>
+                        <div class="subgrid-item4">Be</div>
+                        <div class="subgrid-item5">Right</div>
+                        <div class="subgrid-item5">Here</div>
+                    </div>  
+                </div>
+                <div class="grid-item3">Maybe a disclosure right here</div>
+                <div class="grid-item4">Maybe a subscription box right here</div>
+                <div class="grid-item5">Then something right here.</div>
             </div>
-            <div class="FlexItem FlexContent">
-                <a>This</a>
-                <a>is</a>
-                <a>a</a>
-                <a>test</a>
-            </div>
-            <div class="FlexItem FlexSideTwo">I am content in the SideTwo.
-            </div>
-            <div class="FlexItem FlexFooter">This material belong to Kory...I guess</div>
     </body>
 </html>
